# dancing-links-t-puzzle

./: README.md  dancing_links_nodes.py  dancing_links_root.py  main.py  mypy.ini  polycube.py  polycube_drawing.py  polycube_tiling.py  polyomino.py  polyomino_tiling.py  pyproject.toml  time_solving.py  timing_decorator.py
problems/: knuth_example.py  l_tetrominos_in_4x4_board.py  o_tetrominos_in_4x2x2_box.py  t_puzzle.py
